@@ -1,3 +1,7 @@
+2014-04-23  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 12.2.0 Released.
+
 2014-04-21  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 12.2.0-rc3 Released.
